--- a/app/angular-udemy/23-js-xmlhttprequestobject/index.html
+++ b/app/angular-udemy/23-js-xmlhttprequestobject/index.html
@@ -37,11 +37,40 @@
 <div class="container">
 
     <div ng-controller="mainController">
+        <div>
+            <label>What is your IG name?</label>
+            <input ng-model="igname" type="text" />
+        </div>
 
-        <input type="button" value="Click me" ng-click="buttonClicked()"/>
-        <br/>
-        <div ng-cloak>{{ name }}</div>
+       <!-- <div class="alert" ng-show="igname.length !== characters">
+            Must be 5 characters!
+        </div>-->
 
+        <div class="alert"
+             ng-class="{
+                'alert-warning': igname.length < characters,
+                'alert-danger' : igname.length > characters
+                }"
+             ng-show="igname.length !== characters">
+            <div ng-show="igname.length < characters">
+                You have less than 5 characters!
+            </div>
+            <div ng-show="igname.length > characters">
+                You have more than 5 characters!
+            </div>
+        </div>
+
+        <hr/>
+
+        <h1>instagram.com/{{ igname }}</h1>
+        <label>link: </label>
+        <a href="http://instagram.com/{{ lowercaseigname() }}">http://instagram.com/{{ lowercaseigname() }}</a>
+        <h3>Rules</h3>
+        <ul>
+            <li ng-repeat="rule in rules">
+                {{ rule.rulename }}
+            </li>
+        </ul>
     </div>
 
 </div>
