--- a/app/angular-udemy/25-angular-multiple-controllers-and-view/index.html
+++ b/app/angular-udemy/25-angular-multiple-controllers-and-view/index.html
@@ -38,9 +38,13 @@
 
     <div ng-controller="mainController">
 
-        <input type="button" value="Click me" ng-click="buttonClicked()" />
-        <br/>
-        <div ng-cloak>{{ name }}</div>
+        <h1>{{ name }}</h1>
+
+    </div>
+
+    <div ng-controller="secondController">
+
+        <h1>{{ name }}</h1>
 
     </div>
 
