--- a/app/angular-udemy/24-external-data-and-$http/index.html
+++ b/app/angular-udemy/24-external-data-and-$http/index.html
@@ -42,9 +42,9 @@
             <input ng-model="igname" type="text" />
         </div>
 
-       <!-- <div class="alert" ng-show="igname.length !== characters">
-            Must be 5 characters!
-        </div>-->
+        <!-- <div class="alert" ng-show="igname.length !== characters">
+             Must be 5 characters!
+         </div>-->
 
         <div class="alert"
              ng-class="{
@@ -71,6 +71,9 @@
                 {{ rule.ruleName }}
             </li>
         </ul>
+
+        Add rule: <input type="text" ng-model="newRule"/><a href="#" class="btn btn-default" ng-click="addRule()">Add</a>
+
     </div>
 
 </div>
