--- a/app/angular-udemy/28-routing-and-template-and-controller-2/index.html
+++ b/app/angular-udemy/28-routing-and-template-and-controller-2/index.html
@@ -16,6 +16,7 @@
 
     <!-- load angular via CDN -->
     <script src="https://code.angularjs.org/1.3.9/angular.js"></script>
+    <script src="https://code.angularjs.org/1.3.9/angular-route.js"></script>
     <script src="app.js"></script>
 </head>
 <body>
@@ -28,7 +29,9 @@
             </div>
 
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
+                <li><a href="#/second"><i class="fa fa-home"></i> Second</a></li>
+
             </ul>
         </div>
     </nav>
@@ -36,13 +39,7 @@
 
 <div class="container">
 
-    <div ng-controller="mainController">
-
-        <input type="button" value="Click me" ng-click="buttonClicked()" />
-        <br/>
-        <div ng-cloak>{{ name }}</div>
-
-    </div>
+    <div ng-view></div>
 
 </div>
 
