--- a/app/app-patient/index.html
+++ b/app/app-patient/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en-us" ng-app="weatherApp">
+<html lang="en-us" ng-app="patientApp">
 <head>
-    <title>46 - A Weather Forecast SPA</title>
+    <title>Patient Records - UX</title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta charset="UTF-8">
 
