--- a/app/app-patient/index.html
+++ b/app/app-patient/index.html
@@ -8,34 +8,92 @@
     <!-- load bootstrap and fontawesome via CDN -->
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
 
+    <style>
+        .glyphicon-refresh-animate {
+            -animation: spin .7s infinite linear;
+            -webkit-animation: spin2 .7s infinite linear;
+        }
+
+        @-webkit-keyframes spin2 {
+            from { -webkit-transform: rotate(0deg);}
+            to { -webkit-transform: rotate(360deg);}
+        }
+
+        @keyframes spin {
+            from { transform: scale(1) rotate(0deg);}
+            to { transform: scale(1) rotate(360deg);}
+        }
+    </style>
+
     <!-- load angular via CDN -->
     <script src="https://code.angularjs.org/1.3.9/angular.js"></script>
     <script src="https://code.angularjs.org/1.3.9/angular-route.js"></script>
     <script src="https://code.angularjs.org/1.3.9/angular-resource.js"></script>
-    <script src="app.js"></script>
-    <script src="patient/view.js"></script>
+
 </head>
 <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+    <script src="ui-bootstrap-tpls-0.12.0.js"></script>
+    <script src="app.js"></script>
+    <script src="login.js"></script>
+    <script src="patient/view.js"></script>
 
-<header>
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">AngularJS Weather Forecast</a>
+    <header>
+        <nav class="navbar navbar-default">
+            <div class="container">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="/">Patient Records</a>
+                </div>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
+                </ul>
             </div>
+        </nav>
+    </header>
 
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#/"><i class="fa fa-home"></i> Home</a></li>
-            </ul>
-        </div>
-    </nav>
-</header>
+    <div class="container">
 
-<div class="container">
+        <div ng-view></div>
 
-    <div ng-view></div>
+    </div>
 
-</div>
-
+    <!-- Login Modal -->
+    <div ng-controller="loginControllerModal">
+        <script type="text/ng-template" id="login.html">
+            <form class="form-horizontal" ng-submit="submit()">
+                <div class="modal-header">
+                    <h4 class="modal-title">Patient Records Login</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="inputEmail3" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="inputEmail3" placeholder="Email" ng-model="credential.email" ng-disabled="loginLoading">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="inputPassword3" class="col-sm-2 control-label">Password</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" id="inputPassword3" placeholder="Password" ng-model="credential.password" ng-disabled="loginLoading">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit"
+                                    class="btn"
+                                    ng-class="{
+                                        'btn-primary' : !loginLoading,
+                                        'btn-warning' : loginLoading
+                                        }" ngcloak ng-disabled="loginLoading">
+                                <span ng-class="{'glyphicon glyphicon-refresh glyphicon-refresh-animate' : loginLoading}" ngcloak></span> Sign in
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </script>
+    </div>
 </body>
 </html>
